Update letter spacing examples

--- a/src/pages/docs/letter-spacing.mdx
+++ b/src/pages/docs/letter-spacing.mdx
@@ -18,40 +18,40 @@ export const classes = { plugin }
 
 Control the letter spacing of an element using the `tracking-{size}` utilities.
 
-```html
+```html lightBlue
 <template preview>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.tracking-tighter</p>
-    <p class="tracking-tighter text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-tighter</p>
+    <p class="tracking-tighter text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.tracking-tight</p>
-    <p class="tracking-tight text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-tight</p>
+    <p class="tracking-tight text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.tracking-normal</p>
-    <p class="tracking-normal text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-normal</p>
+    <p class="tracking-normal text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.tracking-wide</p>
-    <p class="tracking-wide text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-wide</p>
+    <p class="tracking-wide text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.tracking-wider</p>
-    <p class="tracking-wider text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-wider</p>
+    <p class="tracking-wider text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
   <div>
-    <p class="text-sm text-gray-600">.tracking-widest</p>
-    <p class="tracking-widest text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <p class="mb-1 text-sm text-light-blue-600">.tracking-widest</p>
+    <p class="tracking-widest text-lg text-light-blue-800">The quick brown fox jumped over the lazy dog.</p>
   </div>
 </template>
 
-<p class="tracking-tighter ...">The quick brown fox ...</p>
-<p class="tracking-tight ...">The quick brown fox ...</p>
-<p class="tracking-normal ...">The quick brown fox ...</p>
-<p class="tracking-wide ...">The quick brown fox ...</p>
-<p class="tracking-wider ...">The quick brown fox ...</p>
-<p class="tracking-widest ...">The quick brown fox ...</p>
+<p class="**tracking-tighter** ...">The quick brown fox ...</p>
+<p class="**tracking-tight** ...">The quick brown fox ...</p>
+<p class="**tracking-normal** ...">The quick brown fox ...</p>
+<p class="**tracking-wide** ...">The quick brown fox ...</p>
+<p class="**tracking-wider** ...">The quick brown fox ...</p>
+<p class="**tracking-widest** ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
