--- a/src/pages/docs/object-position.mdx
+++ b/src/pages/docs/object-position.mdx
@@ -18,61 +18,57 @@ export const classes = { plugin }
 
 Use the `object-{side}` utilities to specify how a replaced element's content should be positioned within its container.
 
-```html
+```html amber
 <template preview>
-  <div class="flex justify-around mb-8">
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-left-top</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-left-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+  <div class="grid grid-cols-3 gap-4">
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-left-top</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-left-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-top</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-right-top</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-right-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-left</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-left object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-center</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-center object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-right</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-right object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+    </div>
+    <div>
+      <p class="text-center text-sm text-amber-600 mb-1">.object-left-bottom</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-left-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-top</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+      <p class="text-center text-sm text-amber-600 mb-1">.object-bottom</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
     </div>
     <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-right-top</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-right-top object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-  </div>
-  <div class="flex justify-around mb-8">
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-left</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-left object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-center</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-center object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-right</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-right object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-  </div>
-  <div class="flex justify-around">
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-left-bottom</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-left-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-bottom</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
-    </div>
-    <div class="flex-1">
-      <p class="text-center text-sm text-gray-600 mb-1">.object-right-bottom</p>
-      <img class="mx-auto bg-gray-400 w-24 h-24 object-right-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
+      <p class="text-center text-sm text-amber-600 mb-1">.object-right-bottom</p>
+      <img class="mx-auto bg-amber-300 bg-stripes bg-stripes-white w-24 h-24 rounded-md overflow-hidden object-right-bottom object-none" src="https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=64&h=64&q=80">
     </div>
   </div>
 </template>
 
-<img class="object-none object-left-top bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-top bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-right-top bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-left bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-center bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-right bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-left-bottom bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-bottom bg-gray-400 w-24 h-24" src="...">
-<img class="object-none object-right-bottom bg-gray-400 w-24 h-24" src="...">
+<img class="object-none **object-left-top** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-top** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-right-top** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-left** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-center** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-right** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-left-bottom** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-bottom** bg-yellow-300 w-24 h-24 ..." src="...">
+<img class="object-none **object-right-bottom** bg-yellow-300 w-24 h-24 ..." src="...">
 ```
 
 ## Responsive
