--- a/src/pages/docs/min-height.mdx
+++ b/src/pages/docs/min-height.mdx
@@ -18,18 +18,18 @@ export const classes = { plugin }
 
 Set the minimum height of an element using the `min-h-0`, `min-h-full`, or `min-h-screen` utilities.
 
-```html
+```html purple
 <template preview>
-  <div class="h-48 p-6 bg-gray-300">
-    <div class="h-24 min-h-full p-6 bg-gray-400 flex items-center justify-center">
-      <span>min-h-full</span>
+  <div class="h-48 p-6 bg-purple-300 rounded-md">
+    <div class="h-24 min-h-full p-6 bg-purple-500 flex items-center justify-center rounded text-white font-semibold">
+      <span>.min-h-full</span>
     </div>
   </div>
 </template>
 
 <div class="h-48 ...">
-  <div class="h-24 min-h-full ...">
-    min-h-full
+  <div class="h-24 **min-h-full** ...">
+    .min-h-full
   </div>
 </div>
 ```
