Update list style position examples

--- a/src/pages/docs/list-style-position.mdx
+++ b/src/pages/docs/list-style-position.mdx
@@ -18,11 +18,11 @@ export const classes = { plugin }
 
 Control the position of the markers in a list using the `list-inside` and `list-outside` utilities.
 
-```html
+```html lightBlue
 <template preview class="p-4 px-8">
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.list-inside</p>
-    <ul class="list-disc list-inside bg-gray-200 text-gray-800 py-2">
+    <p class="mb-1 text-sm text-light-blue-600">.list-inside</p>
+    <ul class="list-disc list-inside bg-light-blue-200 bg-stripes bg-stripes-white text-gray-600 py-2 rounded-md">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
@@ -30,8 +30,8 @@ Control the position of the markers in a list using the `list-inside` and `list-
   </p>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.list-outside</p>
-    <ul class="list-disc list-outside bg-gray-200 text-gray-800 py-2">
+    <p class="mb-1 text-sm text-light-blue-600">.list-outside</p>
+    <ul class="list-disc list-outside bg-light-blue-200 bg-stripes bg-stripes-white text-gray-600 py-2 rounded-md">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
       <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
@@ -39,12 +39,12 @@ Control the position of the markers in a list using the `list-inside` and `list-
   </div>
 </template>
 
-<ul class="list-inside bg-gray-200 ...">
+<ul class="list-inside bg-rose-200 ...">
   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
   ...
 </ul>
 
-<ul class="list-outside bg-gray-200 ...">
+<ul class="list-outside bg-rose-200 ...">
   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
   ...
 </ul>
