Update list style type examples

--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -18,10 +18,10 @@ export const classes = { plugin }
 
 To create bulleted or numeric lists, use the `list-disc` and `list-decimal` utilities.
 
-```html
+```html purple
 <template preview>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.list-disc</p>
+    <p class="mb-1 text-sm text-purple-600">.list-disc</p>
     <ul class="list-disc list-inside">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
@@ -29,7 +29,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
     </ul>
   </div>
   <div class="mb-6">
-    <p class="text-sm text-gray-600">.list-decimal</p>
+    <p class="mb-1 text-sm text-purple-600">.list-decimal</p>
     <ol class="list-decimal list-inside">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
@@ -37,7 +37,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
     </ol>
   </div>
   <div>
-    <p class="text-sm text-gray-600">.list-none (default)</p>
+    <p class="mb-1 text-sm text-purple-600">.list-none (default)</p>
     <ul class="default">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
       <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
@@ -47,12 +47,12 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
   </div>
 </template>
 
-<ul class="list-disc">
+<ul class="**list-disc**">
   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
   ...
 </ul>
 
-<ol class="list-decimal">
+<ol class="**list-decimal**">
   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
   ...
 </ol>
