Update overscroll behavior examples more

--- a/src/pages/docs/overscroll-behavior.mdx
+++ b/src/pages/docs/overscroll-behavior.mdx
@@ -22,7 +22,7 @@ Use `overscroll-auto` to make it possible for the user to continue scrolling a p
   </div>
 </template>
 
-<div class="overscroll-auto ...">Lorem ipsum dolor sit amet...</div>
+<div class="**overscroll-auto** ...">Lorem ipsum dolor sit amet...</div>
 ```
 
 ## Contain
@@ -38,7 +38,7 @@ Use `overscroll-contain` to prevent scrolling in the target area from triggering
   </div>
 </template>
 
-<div class="overscroll-contain ...">Lorem ipsum dolor sit amet...</div>
+<div class="**overscroll-contain** ...">Lorem ipsum dolor sit amet...</div>
 ```
 
 ## None
@@ -54,7 +54,7 @@ Use `overscroll-none` to prevent scrolling in the target area from triggering sc
   </div>
 </template>
 
-<div class="overscroll-none ...">Lorem ipsum dolor sit amet...</div>
+<div class="**overscroll-none** ...">Lorem ipsum dolor sit amet...</div>
 ```
 
 ## Responsive
@@ -62,7 +62,7 @@ Use `overscroll-none` to prevent scrolling in the target area from triggering sc
 To control the overscroll-behavior property at a specific breakpoint, add a `{screen}:` prefix to any existing overscroll-behavior utility. For example, use `md:overscroll-contain` to apply the `overscroll-contain` utility at only medium screen sizes and above.
 
 ```html
-<div class="overscroll-auto md:overscroll-contain lg:overscroll-none ...">
+<div class="overscroll-auto **md:overscroll-contain lg:overscroll-none** ...">
   <!-- ... -->
 </div>
 ```
