Update resize examples

--- a/src/pages/docs/resize.mdx
+++ b/src/pages/docs/resize.mdx
@@ -13,9 +13,9 @@ export const classes = { plugin }
 
 Use `resize` to make an element horizontally and vertically resizable.
 
-```html
+```html purple
 <template preview>
-  <textarea class="resize border rounded focus:outline-none focus:shadow-outline"></textarea>
+  <textarea class="resize border rounded-md"></textarea>
 </template>
 ```
 
@@ -23,9 +23,9 @@ Use `resize` to make an element horizontally and vertically resizable.
 
 Use `resize-y` to make an element vertically resizable.
 
-```html
+```html emerald
 <template preview>
-  <textarea class="resize-y border rounded focus:outline-none focus:shadow-outline"></textarea>
+  <textarea class="resize-y border rounded-md"></textarea>
 </template>
 ```
 
@@ -33,9 +33,9 @@ Use `resize-y` to make an element vertically resizable.
 
 Use `resize-x` to make an element horizontally resizable.
 
-```html
+```html amber
 <template preview>
-  <textarea class="resize-x border rounded focus:outline-none focus:shadow-outline"></textarea>
+  <textarea class="resize-x border rounded-md"></textarea>
 </template>
 ```
 
@@ -43,9 +43,9 @@ Use `resize-x` to make an element horizontally resizable.
 
 Use `resize-none` to prevent an element from being resizable.
 
-```html
+```html lightBlue
 <template preview>
-  <textarea class="resize-none border rounded focus:outline-none focus:shadow-outline"></textarea>
+  <textarea class="resize-none border rounded-md"></textarea>
 </template>
 ```
 
