--- a/src/pages/docs/font-smoothing.mdx
+++ b/src/pages/docs/font-smoothing.mdx
@@ -18,24 +18,24 @@ export const classes = { plugin }
 
 Use the `subpixel-antialiased` utility to render text using subpixel antialiasing.
 
-```html
+```html lightBlue
 <template preview>
   <p class="subpixel-antialiased text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="subpixel-antialiased ...">The quick brown fox ...</p>
+<p class="**subpixel-antialiased** ...">The quick brown fox ...</p>
 ```
 
 ## Grayscale Antialiasing
 
 Use the `antialiased` utility to render text using grayscale antialiasing.
 
-```html
+```html emerald
 <template preview>
   <p class="antialiased text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="antialiased ...">The quick brown fox ...</p>
+<p class="**antialiased** ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
